src/test/deca/context/valid/objet/field_class_02.deca
// Description:
//   class in field
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int x;
    int setX() {
        return x;
    }
}

class B {
     A a;
     int n = a.setX();
}


